# Clinicaltriageenv

./: .gitignore  Dockerfile  README.md  extract_docx.py  inference.py  openenv.yaml  pyproject.toml  read_docx.py  requirements.txt  test_grader.py
server/: app.py  environment.py  grader.py  main.py
server/tasks/: easy.json  hard.json  medium.json
